--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ jsonschema = "^4.21.1"
 black = "^24.2.0"
 flake8 = "^7.0.0"
 isort = "^5.13.2"
+pre-commit = "^3.7.0"
 
 [build-system]
 requires = ["poetry-core"]
