--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,15 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 79
+exclude = '''
+(
+    __pycache__
+)
+'''
+
+[tool.flake8]
+max-line-length = 79
+extend-exclude = '__pycache__'
+
+[tool.isort]
+skip = '__pycache__'
